<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="?homeCardStyle"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@android:id/icon"
            style="@style/CardIcon"
            android:duplicateParentState="true"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_dhizuku_24dp" />

        <TextView
            style="@style/CardTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/home_icon_padding"
            android:layout_weight="1"
            android:text="@string/home_dhizuku_title" />

    </LinearLayout>

    <TextView
        android:id="@android:id/text1"
        style="@style/CardContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        tools:text="@string/home_dhizuku_description" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@android:id/button1"
            style="@style/CardButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_dhizuku_button_view_command"
            app:icon="@drawable/ic_code_24dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@android:id/button2"
            style="@style/CardButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/home_dhizuku_button_manage"
            app:icon="@drawable/ic_apps_generic_24dp" />

    </LinearLayout>

</LinearLayout>
